# my_couple

./: dummy-solver.py  precice-config.xml  run-cavity.sh  run-dummy.sh
applications/laplaceMultiRegionFoam/: createFields.H  myPoissonFoam.C
applications/laplaceMultiRegionFoam/Make/linux64GccDPInt32Opt/: myPoissonFoam.C.dep  variables
applications/myIcoFoam/: createFields.H  myIcoFoam.C
applications/myIcoFoam/Make/linux64GccDPInt32Opt/: myIcoFoam.C.dep
applications/myPoissonFoam/: createFields.H  myPoissonFoam.C
applications/myPoissonFoam/Make/: files
applications/myPoissonFoam/Make/linux64GccDPInt32Opt/: sourceFiles
cavity/0/: Force  Stress
cavity/system/: controlDict  preciceDict
cavity_temp/: clean.sh  run.sh
cavity_temp/0/: T  Temperature
cavity_temp/constant/: transportProperties
cavity_temp/constant/polyMesh/: boundary  owner
cavity_temp/constant/polyMesh/sets/: box1
cavity_temp/precice-profiling/: cavity_temp-0-1.json
cavity_temp/system/: blockMeshDict  controlDict  fvOptions  fvSchemes  fvSolution  preciceDict  topoSetDict
cells/: CMakeLists.txt  README.md  bdm.toml  clean.sh  run.sh
cells/src/: cells.cc  cells.h  my_cell.h  precice_adapter.h
openfoam-adapter-1.3.1/: Adapter.C  Interface.C
openfoam-adapter-1.3.1/FP/: FP.C  FP.H  FluidTemperature.C  FluidTemperature.H  ModuleFP.C  ParticlePosition.C  ParticlePosition.H
openfoam-adapter-1.3.1/Make/: files
openfoam-adapter-alex/: Adapter.C  Adapter.H  Interface.C
openfoam-adapter-alex/FP/: FP.C  FP.H  FluidTemperature.C  FluidTemperature.H  ParticlePosition.C
tools/: clean-tutorial-base.sh
